Fix repost-form z-index bug (#65)

--- a/src/sites/desktop/common/styles/repost-form.less
+++ b/src/sites/desktop/common/styles/repost-form.less
@@ -3,7 +3,7 @@
 > .background {
 	display: none;
 	position: fixed;
-	z-index: 1;
+	z-index: 1024;
 	top: 0;
 	left: 0;
 	width: 100%;
@@ -19,7 +19,7 @@
 	top: 128px;
 	left: 0;
 	right: 0;
-	z-index: 2;
+	z-index: 1025;
 	margin: 0 auto;
 	padding: 16px;
 	width: 550px;
